--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
     "zod": "^3.17.9"
